[project]
name = "comfy-sidebar"
description = "A custom queue sidebar and image comparison extension that reintroduces and improves a sidebar queue menu and unified compact topbar layout for ComfyUI."
version = "1.2.6"
license = { file = "LICENSE" }
dependencies = []

[project.urls]
Repository = "https://github.com/m0rtus59/ComfyUI-ComfySidebar"

[tool.comfy]
PublisherId = "soundslikethunder"
DisplayName = "Comfy Sidebar"